# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

  16 Oct 2006; Roy Marples <uberlord@gentoo.org>:

    Trim bash code from rc-daemon now that s-s-d works entirely on BSD.
    Add default BSD files - master.passwd, login.conf.
    Don't mount svcdir/tmp if we don't need to.
    depscan.sh now updates if deptree isn't readable by bash.
    Move SPARC fixes back to the ebuild.
    rmnologin is used on BSD too.

  12 Oct 2006; Roy Marples <uberlord@gentoo.org>:

    Ensure that pid_is_exec is consistent in start-stop-daemon.

  11 Oct 2006; Roy Marples <uberlord@gentoo.org>:

    Add passwd, group and fstab for BSD.
    linprocfs is now mounted ASAP if there is an entry in /etc/fstab for it.
    start-stop-daemon now compiles with OpenPAM.

  05 Oct 2006; Mike Frysinger <vapier@gentoo.org>:

    Allow people to move /etc/adjtime to /var/lib #68139 in init.d/clock.

* baselayout-1.13.0_alpha1 (02 Oct 2006)

  02 Oct 2006; Roy Marples <uberlord@gentoo.org>:

    wpa_supplicant is now the default for wireless setup if installed.

  30 Sep 2006; Roy Marples <uberlord@gentoo.org>:

    Added warning about clamping MSS when running ppp on a router, #149525
    thanks to Alin Nastac.

    Punted DISPLAYMANAGER from /etc/rc.conf as it's now in /etc/conf.d/xdm 

  29 Sep 2006; Roy Marples <uberlord@gentoo.org>:

    When changing runlevels and a config file exists for either the new
    runlevel or the old one, we stop the service so that it will use the
    new config file when we get around to re-starting services, #149182.

  28 Sep 2006; Roy Marples <uberlord@gentoo.org>:

    When we schedule a service to start by a service, also schedule it to
    start by anything else it provides, #145183.

  26 Sep 2006; Roy Marples <uberlord@gentoo.org>:

    Don't wait for scheduled services to restart when a service is
    started in the background as this may tie up the calling daemon, #148700.
