@@ -1,5 +1,6 @@
-DIR   = /usr/share/$(NAME)
-FILES = fstab group master.passwd 
+DIR   = /usr/share/baselayout
+FILES = fstab group 
+FILES_SECURE = master.passwd
 
 TOPDIR = ..
 include $(TOPDIR)/default.mk
