@@ -1,5 +1,6 @@
-DIR   = /usr/share/$(NAME)
-FILES = fstab issue.devfix group passwd shadow
+DIR   = /usr/share/baselayout
+FILES = fstab issue.devfix group passwd
+FILES_SECURE = shadow
 
 TOPDIR = ..
 include $(TOPDIR)/default.mk
